--- a/README
+++ b/README
@@ -9,4 +9,6 @@ TODO:
 + I still have to add iTalk.
 ~ Fix start/end dates, 'Days Left Till Rebill' it doesn't seem to be correct when the last day comes around or the first day.
 
-I removed the pictures and finally the index.html
+---
+
+Please be aware that I have not used Git before and will take some time before I fully understand it’s use.
